<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smorphi_driver_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="smorphi@todo.todo">smorphi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>smorphi_cartographer</exec_depend>
  <exec_depend>smorphi_ros2_controller</exec_depend>
  <exec_depend>smorphi_ros2_launchers</exec_depend>
  <exec_depend>smorphi_ros_imu</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
